fix: Form date input shrinking on IOS. Added min width to container to enforce width

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -430,7 +430,7 @@ body section{
 .dates-section div{
     display: flex;
     flex-basis: 100%;
-    width: 100%;
+    min-width: 100%;
     flex: 1;
     padding: 5px;
     align-items: center;
